<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_message"
        android:icon="@mipmap/icon_message"
        android:orderInCategory="100"
        android:title="@string/action_message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_creste_contract"
        android:icon="@mipmap/icon_create_hetong"
        android:orderInCategory="100"
        android:title="@string/action_creste_contract"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_order"
        android:icon="@mipmap/icon_create_order"
        android:orderInCategory="100"
        android:title="@string/action_create_order"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_examine"
        android:icon="@mipmap/icon_shenpi"
        android:orderInCategory="100"
        android:title="@string/action_examine"
        app:showAsAction="never" />

</menu>
