<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <CheckBox
        android:id="@+id/state_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/selector_bg_state"
        android:button="@null"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/huifang_state_all"
        android:textColor="@color/selector_state_textcolor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huifang_state"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/huifang_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_state"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/huifang_state_week"
            android:textColor="@color/selector_state_textcolor" />

        <RadioButton
            android:id="@+id/week2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_state"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/huifang_state_week2"
            android:textColor="@color/selector_state_textcolor" />

        <RadioButton
            android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_state"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/huifang_state_month"
            android:textColor="@color/selector_state_textcolor" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ziyuan_state"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/ziyuan_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/qianzai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_state"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ziyuan_state_qianzai"
            android:textColor="@color/selector_state_textcolor" />

        <RadioButton
            android:id="@+id/yixiang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_state"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ziyuan_state_yixiang"
            android:textColor="@color/selector_state_textcolor" />

        <RadioButton
            android:id="@+id/zhun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_state"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ziyuan_state_zhun"
            android:textColor="@color/selector_state_textcolor" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/app_toolbar_bg"
        android:text="@string/sure"
        android:textSize="18sp" />

</LinearLayout>
