<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/today_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/today_task"
                android:textColor="@color/main_tab_color"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/week_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/week_task"
                android:textColor="@color/main_tab_color"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/more"
            android:textColor="@color/main_tab_color"
            android:textSize="18sp" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/task_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <View
        android:background="@color/grey_text_clolr"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>
