<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="15dp"
    android:paddingTop="15dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:gravity="center"
            android:textColor="@color/app_toolbar_bg"
            android:text="08:00"
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@+id/start_time"
            android:gravity="center"
            android:textColor="@color/app_toolbar_bg"
            android:text="—"
            android:id="@+id/division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@+id/division"
            android:gravity="center"
            android:textColor="@color/app_toolbar_bg"
            android:text="09:00"
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:singleLine="true"
            android:id="@+id/task_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/importance" />

                <ImageView
                    android:id="@+id/icon_importance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/test_importance" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority" />

                <ImageView
                    android:id="@+id/icon_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/test_priority" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from" />

            <TextView
                android:id="@+id/task_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="王先生" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"/>

            <TextView
                android:id="@+id/state"
                android:padding="5dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="未完成"
                android:maxEms="5"
                android:minEms="5"
                android:background="@color/app_toolbar_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
